ec2.tf
# Key Pair (login)

resource "aws_key_pair" "my_key" {
  key_name = "ec2-terraform-key"
  public_key = file("ec2-terraform-key.pub")
}

# VPC & Security Groups

resource "aws_default_vpc" "default" {
  tags = {
    Name = "Default VPC"
  }
}

resource "aws_security_group" "my_security_group" {
  name = "automate-sg"
  description = "This will add a TF generated by Security Group"
  vpc_id = aws_default_vpc.default.id
  tags = {
    Name = "automate-sg"
  }
}

# -------------------
# INGRESS RULES
# -------------------
resource "aws_vpc_security_group_ingress_rule" "ssh_ingress" {
  security_group_id = aws_security_group.my_security_group.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 22
  to_port           = 22
  ip_protocol       = "tcp"
  description       = "Allow SSH"
}

resource "aws_vpc_security_group_ingress_rule" "http_ingress" {
  security_group_id = aws_security_group.my_security_group.id
  cidr_ipv4 = "0.0.0.0/0"
  from_port = 80
  to_port = 80
  ip_protocol = "tcp"
  description = "Allow Http"
}

resource "aws_vpc_security_group_ingress_rule" "https_ingress" {
  security_group_id = aws_security_group.my_security_group.id
  cidr_ipv4 = "0.0.0.0/0"
  from_port = 443
  to_port = 443
  ip_protocol = "tcp"
  description = "Allow Https"
}

# -------------------
# EGRESS RULES
# -------------------
resource "aws_vpc_security_group_egress_rule" "ssh_egress" {
  security_group_id = aws_security_group.my_security_group.id
  cidr_ipv4 = "0.0.0.0/0"
  ip_protocol = "-1"
  from_port = 0
  to_port = 0
  description = "Allow all outbound traffic"
}

# EC2 Instance
resource "aws_instance" "my_instance" {
  key_name = aws_key_pair.my_key.key_name
  security_groups = [ aws_security_group.my_security_group.name ]
  instance_type = "t2.micro"
  ami = "ami-0360c520857e3138f" #ubuntu 24.04 lts

  root_block_device {
    volume_size = 15
    volume_type = "gp3"
  }
  tags = {
    name= "terraform-ec2-automate"
  }
}
